src/objects/Playbook_History__c.object
<CustomObject>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Playbook History</relationshipLabel>
        <relationshipName>Playbook_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MSTR_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSTR User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Playbook_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Playbook Histories</relationshipLabel>
        <relationshipName>Playbook_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Playbook_Link__c</fullName>
        <label>Playbook Link</label>
        <referenceTo>Playbook_Link__c</referenceTo>
        <relationshipLabel>Playbook History</relationshipLabel>
        <relationshipName>Playbook_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stage_Status__c</fullName>
        <label>Stage/Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, &quot;View&quot;, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Playbook History</label>
    <nameField>
        <displayFormat>R{00000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Playbook Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>